--- a/Circles/circles.css
+++ b/Circles/circles.css
@@ -249,8 +249,9 @@ button.lignCol {
 	height: 30px;
 	width: 40%;
 
-	margin-right: auto;
-	margin-left: auto;
+	margin-top: 5px;
+	margin-right: 5px;
+	margin-left: 5px;
 
 
 }
